src/test/ui/pattern/bindings-after-at/copy-and-move-mixed.stderr
error[E0382]: use of partially moved value
  --> $DIR/copy-and-move-mixed.rs:12:9
   |
LL |     let a @ NC(b, c @ NC(d, e)) = NC(C, NC(C, C));
   |         ^         - value partially moved here
   |         |
   |         value used here after partial move
   |
   = note: partial move occurs because value has type `NC<C, C>`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
